# Project file for Multi Diag Tools
# * Part: mdtport *
# * Directory: mdtport *

# Project
project (multidiagtools)

# Liste des fichiers d'entêtes Qt (entêtes contenant Q_OBJECT)
set (HEADER_FILES 
          # Port I/O
          mdtAbstractPort.h
          mdtPortThread.h
          mdtPortThreadHelper.h
          mdtPortThreadHelperSocket.h
          #mdtPortThreadHelperPort.h
          mdtPortReadThread.h
          mdtPortWriteThread.h
          mdtTcpSocket.h
          mdtTcpSocketThread.h
          mdtUsbPortThread.h
          mdtUsbtmcPortThread.h
          # Port info
          mdtPortInfoCbHandler.h
          # Port manager
          mdtPortManager.h
          mdtPortManagerStateMachine.h
          mdtUsbPortManager.h
          mdtUsbtmcPortManager.h
          mdtModbusTcpPortManager.h
          # Port config
          mdtPortConfigWidget.h
          # Statud Widget
          mdtPortStatusWidget.h
          # Setup dialogs
          mdtAbstractPortSetupDialog.h
          mdtUsbtmcPortSetupDialog.h
          mdtModbusTcpPortSetupDialog.h
          
          # New USB/USBTMC API
          mdtUsbPortThreadNew.h
          mdtUsbtmcPort.h
    )

# Liste des fichiers sources
set (SOURCES_FILES 
          # Port I/O
          mdtAbstractPort.cpp
          mdtUsbPort.cpp
          mdtUsbPortThread.cpp
          mdtPortThreadHelper.cpp
          mdtPortThreadHelperPort.cpp
          mdtPortThreadHelperSocket.cpp
          mdtUsbtmcPortThread.cpp
          mdtUsbDeviceDescriptor.cpp
          mdtUsbConfigDescriptor.cpp
          mdtUsbInterfaceDescriptor.cpp
          mdtUsbEndpointDescriptor.cpp
          mdtPortThread.cpp
          mdtPortReadThread.cpp
          mdtPortWriteThread.cpp
          mdtTcpSocket.cpp
          mdtTcpSocketThread.cpp
          mdtPortTransaction.cpp
          # Port info
          mdtPortInfo.cpp
          mdtDeviceInfo.cpp
          mdtPortInfoCbHandler.cpp
          # Port manager
          mdtPortManager.cpp
          mdtPortManagerStateMachine.cpp
          mdtUsbPortManager.cpp
          mdtUsbtmcPortManager.cpp
          mdtModbusTcpPortManager.cpp
          # Statud Widget
          mdtPortStatusWidget.cpp
          # Port config
          mdtPortConfig.cpp
          mdtPortConfigWidget.cpp
          # Setup dialogs
          mdtAbstractPortSetupDialog.cpp
          mdtUsbtmcPortSetupDialog.cpp
          mdtModbusTcpPortSetupDialog.cpp
          
          # New USB API
          mdtUsbDeviceList.cpp
          mdtUsbTransfer.cpp
          mdtUsbControlTransfer.cpp
          mdtUsbtmcBulkTransfer.cpp
          mdtUsbPortThreadNew.cpp
          #mdtUsbTransferPool.cpp
          # New USBTMC API
          mdtUsbtmcFrame.cpp
          mdtUsbtmcControlTransfer.cpp
          mdtUsbtmcTransferHandler.cpp
          mdtUsbtmcPortThreadNew.cpp
          mdtUsbtmcPort.cpp
    )

# Liste des fichiers ui
set (FORM_FILES
          mdtPortConfigWidget.ui
          # Setup dialogs
          mdtAbstractPortSetupDialog.ui
    )

# Liste des fichiers rcc (ressources)
set (RESOURCE_FILES

    )

# Platform specific files

# Unix (Posix) specific files
if(UNIX)
  set (SOURCES_FILES ${SOURCES_FILES} 
    # linux/mdtPortPosix.cpp
    linux/mdtPort.cpp
    linux/mdtPortLock.cpp
  )
  set (HEADER_FILES ${HEADER_FILES} 
  )
endif(UNIX)

# Fichiers à traiter par le compilateur moc
QT4_WRAP_CPP (MOC_HEADERS ${HEADER_FILES})

# Fichiers à traiter par le compilateur uic
QT4_WRAP_UI (UIC_HEADERS ${FORM_FILES})

# Fichiers à traiter par le compilateur rcc
QT4_ADD_RESOURCES (RCC_FILES ${RESOURCE_FILES})

# Librairie du projet
add_library (mdtport${MDTLIB_VERSION_SUFFIX} SHARED ${SOURCES_FILES} ${MOC_HEADERS} ${UIC_HEADERS} ${RCC_FILES})
target_link_libraries(mdtport${MDTLIB_VERSION_SUFFIX} ${QT_LIBRARIES})
target_link_libraries(mdtport${MDTLIB_VERSION_SUFFIX} "usb-1.0")
target_link_libraries(mdtport${MDTLIB_VERSION_SUFFIX} "mdtutilsgui${MDTLIB_VERSION_SUFFIX}")

# Version statique
#if(MDT_BUILD_STATIC_LIBS)
#  add_library (mdtport_static STATIC ${SOURCES_FILES} )
#  target_link_libraries(mdtport_static ${QT_LIBRARIES})
#  set_target_properties("mdtport_static" PROPERTIES OUTPUT_NAME "mdtport")
#endif(MDT_BUILD_STATIC_LIBS)

# Translations - We generate a .pro file, that simplify the usage of lupdate
file(WRITE "${PROJECT_SOURCE_DIR}/../../translations/mdtport.pro" "# Translations project file for lupdate/lrelease\n")
file(APPEND "${PROJECT_SOURCE_DIR}/../../translations/mdtport.pro" "# This file is generated by CMake, all changes will be lost\n")
file(APPEND "${PROJECT_SOURCE_DIR}/../../translations/mdtport.pro" "TRANSLATIONS = ${PROJECT_SOURCE_DIR}/../../translations/mdtport_fr.ts\n")
file(APPEND "${PROJECT_SOURCE_DIR}/../../translations/mdtport.pro" "TRANSLATIONS += ${PROJECT_SOURCE_DIR}/../../translations/mdtport_de.ts\n")
foreach(SRCFILE ${SOURCES_FILES})
  file(APPEND "${PROJECT_SOURCE_DIR}/../../translations/mdtport.pro" "SOURCES += ${PROJECT_SOURCE_DIR}/${SRCFILE}\n")
endforeach(SRCFILE)
foreach(FRMFILE ${FORM_FILES})
  file(APPEND "${PROJECT_SOURCE_DIR}/../../translations/mdtport.pro" "FORMS += ${PROJECT_SOURCE_DIR}/${FRMFILE}\n")
endforeach(FRMFILE)

# Headers to install
file(GLOB INSTALL_HEADERS *.h)
install(FILES ${INSTALL_HEADERS} DESTINATION "${HEADERS_DEST_DIR}/mdtport" COMPONENT dev)
install(FILES ${UIC_HEADERS} DESTINATION "${HEADERS_DEST_DIR}/mdtport" COMPONENT dev)

# Destinations
install(TARGETS "mdtport${MDTLIB_VERSION_SUFFIX}" DESTINATION "${LIB_DEST_DIR}" COMPONENT lib)
#if(MDT_BUILD_STATIC_LIBS)
#  install(TARGETS "mdtport_static" DESTINATION "${LIB_DEST_DIR}" COMPONENT lib)
#endif(MDT_BUILD_STATIC_LIBS)

# Strip library and put debug symbols into separate file
if(UNIX)
  add_custom_command(TARGET "mdtport${MDTLIB_VERSION_SUFFIX}"
                    POST_BUILD
                    COMMAND objcopy --only-keep-debug "${PROJECT_SOURCE_DIR}/libmdtport${MDTLIB_VERSION_SUFFIX}.so" "${PROJECT_SOURCE_DIR}/libmdtport${MDTLIB_VERSION_SUFFIX}.dbg"
                    COMMAND strip --strip-debug --strip-unneeded "${PROJECT_SOURCE_DIR}/libmdtport${MDTLIB_VERSION_SUFFIX}.so"
                    COMMAND objcopy --add-gnu-debuglink="libmdtport${MDTLIB_VERSION_SUFFIX}.dbg" "${PROJECT_SOURCE_DIR}/libmdtport${MDTLIB_VERSION_SUFFIX}.so"
                    COMMAND chmod -x "${PROJECT_SOURCE_DIR}/libmdtport${MDTLIB_VERSION_SUFFIX}.dbg")
  install(FILES "${PROJECT_SOURCE_DIR}/libmdtport${MDTLIB_VERSION_SUFFIX}.dbg" DESTINATION "${LIB_DEST_DIR}" COMPONENT dbg)
endif(UNIX)
